# lexvault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  changelog.md  concepts.md  config.md  index.md  integration.md  quickstart.md
docs/stylesheets/: extra.css
examples/: Dockerfile.fake-backend  Dockerfile.litellm  README.md  ci-smoke-config.yaml  ci_smoke.sh  config.yaml  dictionary.yaml  docker-compose.yml  fake_backend.py
overrides/: home.html
shim/: lexvault_shim.py
src/lexvault/: __init__.py  config.py  detector.py  engine.py  guardrail.py  logging.py  vault.py
src/lexvault/adapters/: __init__.py  anthropic.py  openai.py  responses.py
src/lexvault/streaming/: __init__.py  buffer.py  reframer.py  restore.py
tests/: __init__.py  conftest.py
tests/integration/: test_roundtrip.py
tests/unit/: test_adapters.py  test_detector.py  test_engine.py  test_guardrail.py  test_responses.py  test_streaming.py  test_vault.py
