[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lexvault"
version = "0.1.0"
description = "Reversible proprietary-term pseudonymization guardrail for LiteLLM — mask your codenames/products/schema on the way out, restore them faithfully on the way back."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "nitishagar" },
]
keywords = [
    "litellm",
    "guardrail",
    "pseudonymization",
    "redaction",
    "privacy",
    "llm",
    "proxy",
    "enterprise",
    "reversible-masking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.80.15",
    "pyahocorasick>=2.3.1",
    "pydantic>=2.0",
]

# Dev/test tooling. Enables the documented contributor workflow:
#   uv pip install -e ".[dev]"
# (CONTRIBUTING.md references this extra; without it uv warns "does not have
# an extra named `dev`" and installs none of the dev tools.)
[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/nitishagar/lexvault"
Documentation = "https://nitishagar.github.io/lexvault/"
Issues = "https://github.com/nitishagar/lexvault/issues"
Changelog = "https://github.com/nitishagar/lexvault/blob/main/CHANGELOG.md"
Source = "https://github.com/nitishagar/lexvault"

[tool.hatch.build.targets.wheel]
packages = ["src/lexvault"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "shim",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
    "NOTICE",
    "CHANGELOG.md",
]

# --------------------------------------------------------------------------- #
# Ruff — lint + format
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 handled by formatter; S101 (assert) is fine in tests.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

# --------------------------------------------------------------------------- #
# mypy — strict on the package
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src/lexvault"]
# lexvault parses arbitrary, dynamic provider JSON (OpenAI/Anthropic/Responses
# shapes vary across versions). Forcing dict[str, Any]/list[Any] on every local
# that holds such a shape adds noise without catching real bugs; disable the
# bare-generic lint while keeping every other strict check.
disable_error_code = ["type-arg"]

# pyahocorasick has no type stubs; fastapi is an optional litellm proxy dep
# (absent in library-only installs); litellm is dynamic.
[[tool.mypy.overrides]]
module = ["ahocorasick", "fastapi"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.coverage.run]
source = ["lexvault"]
branch = true

[tool.coverage.report]
# CS-A1: the ≥90% gate is scoped to core modules via CI flags (engine/vault/
# detector/streaming). Overall coverage is reported for visibility.
show_missing = true
